fixed an issue where it was making draggable windows on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -665,9 +665,6 @@ ul.treeView ul > li:last-child:after {
     #bioTrees {
         flex-direction: column;
     }
-    #navStickyContainer {
-        margin-bottom: 4%;
-    }
 }
 @media (max-width: 650px) {
     #navContainerOuter {
